<resources>
    <string name="app_name">Coin Toss</string>
    <string name="flip">Flip</string>
    <string name="history">History</string>
    <string name="menu_setting">Setting</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="coin_tails">Coin Tails</string>
    <string name="flip_coin">Flip Coin</string>
    <string name="title_activity_settings">Settings</string>

    <string name="Display_Heads_or_Tails">Heads or Tails</string>
    <string name="Display_Time">3:00 PM</string>
    <string name="Date">1/3/2018</string>

    <string name="title_Date">Date:</string>
    <string name="title_Time">Time:</string>

    <string name="Delete_menu">Delete</string>

    <string name="switch_history_preference">switch_preference_history</string>


</resources>
